--- a/.github/workflows/build_test_deploy.yml
+++ b/.github/workflows/build_test_deploy.yml
@@ -477,7 +477,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
-      - build-arm
+      #- build-arm
       - tests
     strategy:
       fail-fast: false
